--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Bigelow+Rules&display=swap');
 .App {
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
 }
 
@@ -19,4 +20,13 @@
 
 .App-link {
   color: #09d3ac;
+} */
+
+#head {
+  font-family: 'Bigelow Rules';
+  font-size: 72px;
+  color: #0ccac4;
+
+
 }
+
